css/style.css
html {
    overflow-x: hidden;
    scroll-behavior: smooth;
    overflow-y: scroll;
    /* scroll-padding-top: 30vmax; */
}

li{
    cursor: pointer;
}

body {
    font-family: 'Inter',serif;
    font-size: 22px;
    background: linear-gradient(-45deg, #FFFFFF, #fde9f9,#FFFFFF, #EBF1FF, #eedfff);
	background-size: 400% 400%;
    background-attachment: fixed;
    background-position: center;
	animation: gradient 10s ease infinite;
    min-height: 100vh;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.content{
    margin-left: 20%;
    margin-right: 20%;
}

@media screen and (max-width: 1024px) {
    .content{
        margin-left: 9vmin;
        margin-right: 9vmin;
    }
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.navbar li {
    list-style: none;
}

/* NAVBAR MENU */

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: #ffffffe8;
    transition: background-color 200ms linear;
}

.sticky + .content {
    padding-top: 102px;
}

.navbar {
    display: flex;
    align-items: center;
    width: 100%;
    z-index: 100;
    height: 12vmin;
    padding: 1rem;
}

.navbar-right{
    float: right;
}

.nav-links a {
    color: #8FA2C4;
    text-decoration: none;
}

.nav-links a:hover{
    color: #152950;
}

/*logo*/
.navbar img {
    float: left;
    padding-left: 2vmin;
    width: 10%;
}

.menu {
    display: flex;
    font-family: 'Inter',serif;
    font-size: 3vmin;
    text-align: right;
    align-items: center;
    white-space: nowrap;
    color: #E6E9F8;
}


.menu li:hover {
    color: #152950;
    transition: 0.5s ease-in;
}

.menu li {
    padding: 4vmin;
}

.hamburger{
    display: none;
    font-size: 5vmax;
    user-select: none;
    padding: 3vmax;
}

input[type=checkbox] {
    display: none;
}

/* DROPDOWN MENU */
.our-team-navbar {
    position: relative;
}

.dropdown {
    background-color: #EBF1FF;
    /* padding: 1em 0; */
    position: absolute; /*WITH RESPECT TO PARENT*/
    display: none;
    /*border-radius: 8px;*/
    top: 10vmin;
    left: -50%;
}


.dropdown li {
    padding: 0.5em 1em;
    width: 15em;
    text-align: center;
}

.dropdown li:hover {
    background-color: #856E9F;
}

.dropdown a:hover {
    color: white;
}

.our-team-navbar:hover .dropdown {
    display: block;
}

@media screen and (max-width: 1024px){
    .menu {
        display: none;
        position: absolute;
        background-color: #EBF1FF;
        right: 0;
        left: 0;
        text-align: center;
        padding: 16px 0;
    }

    .menu li:hover {
        display: inline-block;
        background-color: #856E9F;
        width: 100%;
        transition: 0.3s ease;
    }

    .menu li + li {
        margin-top: 12vmin;
    }

    .nav-links a {
        color: #8FA2C4;
        text-decoration: none;
    }

    .menu a:hover{
        color: white;
        text-decoration: none;
        display: inline-block;
    }

    input[type=checkbox]:checked ~ .menu {
        display: block;
    }

    .hamburger {
        display: block;
    }

    .dropdown {
        left: 25%;
        top: 12vmin;
    }

    .dropdown li:hover {
        background-color: #856E9F;
        color: white;
    }


}

/*intro*/

.intro{
    /*padding-top: 50px;*/
    justify-content: center;
    padding-top: 10%;
    align-items: center;
}

.intro-container{
    float: left;
    padding-right: 60px;

}

.intro1{
    font-style: italic;
}

.intro2{
    font-family: 'Inter',serif;
    font-size: 4vmax;
    font-weight:700;

}

.button-container{
    float: left;
    width: 50%;
    padding-top: 5%;
}

.get-in-touch{
    background-color: #856E9F;
    border: none;
    color: white;
    width: 100%;
    padding: 8px 32px;
    text-align: center;
    /*text-decoration: none;*/
    display: inline-block;
    font-size: 23px;
    border-radius: 15px;
    font-weight: 300;
}

.intro-body-container{
    font-size: 1.4vmax;
}

.intro-body1{
    padding-bottom: 2.5vmax;
}


.intro-body-container img{
    position: absolute;
    top: 10%;
    z-index: -1;
    width: 45%;
    opacity: 70%;
}


/*intro end*/

@media screen and (max-width: 1024px) {
    .intro2{
        font-size: 10vmin;
    }

    .intro-container {
        float: none;
        padding-bottom: 10%;
    }

    .intro-body-container img{
        position: absolute;
        top: 10%;
        width: 100%;
        left: 30%;
    }

    .intro-body-container{
        font-size: 2.5vmax;
    }

    .button-container {
        width: 100%;
        padding-top: 10%;
    }

}

/* subtitle styling */
.subtitle{
    font-weight: 700;
    font-size: 7vmin;
    text-align: center;
    /*justify-content: center;*/
    /*align-items: center;*/
    display: block;
}

/* ABOUT US */
.about-us{
    margin-top: 20vmax;
    padding-top: 7rem;
}

.about-us-container{
    /*display: flex;*/
    display: block;
    margin-top: 10%;
}

.about-us-text{
    margin-bottom: 5%;
}

.about-us-left{
    float: left;
    color: #856E9F;
    font-weight: 700;
    font-size: 5vmin;
    margin-right: 10%;
    padding-top: 5%;
}

.about-us-right{
    display: flex;
    margin-left: 40%;
}

@media screen and (max-width: 1024px) {
    .about-us{
        margin-top: 100%;
        margin-bottom: 10%;
    }

    .about-us-container{
        position: center;
    }

    .subtitle{
        font-weight: 700;
        font-size: 8vmin;
        text-align: center;
    }

    .about-us-left{
        float: none;
        text-align: center;
        display: block;
        padding-top: 1%;
        font-size: 5vmin;
    }

    .about-us-right{
        margin-left: 0;
        padding-top: 5%;
    }
}

/*OUR TEAMS STYLING*/

.our-teams{
    margin-top: 10vmax;
    padding-top: 7rem;
}

.our-teams-container{
    padding-top: 3%;
}

.row-1{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.row-2{
    display: flex;
    flex-direction: row;
    padding-top: 1%;
    justify-content: center;
}

.our-teams-button{
    /* width: 100%; */
    position: relative;
    display: flex;
    padding: 2%;
}

.our-teams-buttons{
    background-color: #FFFFFF;
    border: none;
    color: black;
    width: 30vmax;
    /*padding: 8px 32px;*/
    text-align: center;
    /*text-decoration: none;*/
    display: inline-block;
    font-size: 1.5vmax;
    border-radius: 15px;
    font-weight: 300;
    padding-top: 20px;
    padding-bottom: 10vmax;
    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
}

@media screen and (max-width: 1024px) {
    .our-teams-container{
        padding-top: 3%;
    }
    
    .row-1{
        display: block;
        flex-direction: row;
        justify-content: center;
    }
    
    .row-2{
        display: block;
        flex-direction: row;
        padding-top: 1%;
        justify-content: center;
    }
    
    .our-teams-button{
        width: 100%;
        position: relative;
        display: flex;
        padding: 2%;
        justify-content: center;
    }
}

/*EVENTS SECTION*/
.events {
    margin-top: 10vmax;
    padding-top: 7rem;
}

.events-section-title{
    display: block;
    float: none;
    flex: none;
    font-weight: 700;
    color: #856E9F;
    padding-top: 5%;
}

.events-title{
    color:#B0579C;
    padding-top: 4%;
}

.events-button{
    background-color: #FFFFFF;
    border: none;
    width: 30vmax;
    height: 15vmax;
    /*padding: 8px 32px;*/
    text-align: center;
    font-size: 1.5vmax;
    border-radius: 15px;
    font-weight: 300;
    padding-top: 20px;
    padding-bottom: 10vmax;
    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
}

.events-container{
    display: inline-flex;
    padding-top: 2%;
}

.events-button-container{
    float: left;
    color: #856E9F;
    font-weight: 700;
    font-size: 5vmin;
}

.events-arrow{
    position: absolute;
    padding-left: 10vmax;
    padding-top: 2.5vmax;
}

.events-description{
    margin-left: 5%;
}


/*JOIN US PAGE*/
.join-us {
    margin-top: 5vmax;
    padding-top: 7rem;
}

.join-us-container{
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.join-us p {
    margin: 1rem;
    font-size: 1.15rem;
}

.join-us .subtitle {
    grid-column: 1 / 3;
    margin-bottom: 2rem;
}

.join-us .join-us-description{
    grid-column: 1 / 2;
}
.join-us-buttons{
    text-align: center;
    display: block;
    padding-bottom: 3vmax;
    grid-column: 1 / 2;
}

.join-us img {
    width: 70%;
}

.join-us .join-us-img {
    grid-row: 2 / 4;
    grid-column: 2 / 3;
}

.join-us-buttons button{
    min-width: 80%;
    margin-bottom: 0.5rem;
    padding: 1rem 2rem;
    border: none;
    color: white;
    text-align: center;
    /*text-decoration: none;*/ 
    font-size: 1.115rem;
    border-radius: 15px;
    font-weight: 300;
    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
    cursor: pointer;
}

.join-us-executive{
    background-color: #B0579C;
}

.join-us-consulting{
    background-color: #57A0B0;
}

.join-us-gen-mem{
    background-color: #856E9F;
}

.gen-mem-benefits{
    font-family: 'Inter',serif;
    font-size: 1.115rem;
    padding-left: 3rem;
    padding-bottom: 2rem;
}

.gen-mem-benefits li{
    padding-bottom: .8rem;
}

/*contact us page*/
/* Style inputs, select elements and textareas */
input[type=text], select, textarea{
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    resize: vertical;
}

/* Style the label to display next to the inputs */
label {
    padding: 12px 12px 12px 0;
    display: inline-block;
}

/* Style the submit button */
input[type=submit] {
    background-color: #04AA6D;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    float: right;
}

/* Style the container */
.container {
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 20px;
}

/* Floating column for labels: 25% width */
.col-25 {
    float: left;
    width: 25%;
    margin-top: 6px;
}

/* Floating column for inputs: 75% width */
.col-75 {
    float: left;
    width: 75%;
    margin-top: 6px;
}

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .col-25, .col-75, input[type=submit] {
        width: 100%;
        margin-top: 0;
    }
}


/* FOOTER */

.footer{
    background-color: #856E9F;
    width: 100%;
    display: flex;
    min-height: 5vmax;
    padding: 1.15% 2%;
}

.footer-images img{
    height: 5vw;
}

.footer-socials img{
    height: 3vw;
}
.footer-socials{
    display: flex;
    gap: 2vw;
    align-items: flex-end;
}

.copyright{
    text-align: center;
    color: white;
    font-family: 'Inter',serif;
    font-size: 1vmax;
    margin: 0 auto;
    align-self: flex-end;
}

.reveal{
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: 2s all ease;
  }
  .reveal.active{
    transform: translateY(0);
    opacity: 1;
  }
  

